2000-12-18  Nick Clifton  <nickc@redhat.com>

	* vms-misc.c (_bfd_vms_get_record): Add default case to
	file_format switch.

2000-12-15  Miloslav Trmac <mitr@volny.cz>

	* elfcore.h (elf_core_file_p): Move to the start of the program
	headers before attempting to read them.

2000-12-14  Kazu Hirata  <kazu@hxi.com>

	* peigen.c: Fix formatting.
	* som.c: Likewise.
	* som.h: Likewise.

2000-12-13  Kazu Hirata  <kazu@hxi.com>

	* peigen.c: Fix formatting.

2000-12-12  Jim Wilson  <wilson@redhat.com>

	*  elfxx-ia64.c (get_dyn_sym_info): Cast %p argument to void *.

2000-12-08  Mark Salter  <msalter@redhat.com>

	* binary.c (binary_set_section_contents): Ignore sections
	with zero size.

2000-12-12  Kazu Hirata  <kazu@hxi.com>

	* m68klinux.c: Fix formatting.
	* m68knetbsd.c: Likewise.
	* mipsbsd.c: Likewise.
	* netbsd-core.c: Likewise.
	* netbsd.h: Likewise.
	* newsos3.c: Likewise.
	* nlm32-alpha.c: Likewise.
	* nlm32-i386.c: Likewise.
	* nlm32-ppc.c: Likewise.
	* nlm32-sparc.c: Likewise.
	* nlmcode.h: Likewise.
	* nlmswap.h: Likewise.
	* nlm-target.h: Likewise.
	* ns32knetbsd.c: Likewise.

2000-12-10  Fred Fish  <fnf@be.com>

      * elflink.h (elf_link_output_extsym): Don't complain about undefined
      symbols in shared objects if allow_shlib_undefined is true.

2000-12-12  Nick Clifton  <nickc@redhat.com>

	* cpu-sh.c: Fix formattng.
	* elf.c: Fix formattng.
	* elf32-mips.c: Fix formattng.
	* elf32-sh.c: Fix formattng.
	* elf64-alpha.c: Fix formattng.

2000-12-09  Nick Clifton  <nickc@redhat.com>

	* elf32-mips.c (_bfd_mips_elf_find_nearest_line): Pass
	dwarf2_find_line_info as last parameter to invocation of
	_bfd_dwarf2_find_nearest_line.
	* elf32-arm.h (elf32_arm_find_nearest_line): Pass
	dwarf2_find_line_info as last parameter to invocation of
	_bfd_dwarf2_find_nearest_line.

2000-12-08  Mark Elbrecht  <snowball3@bigfoot.com>

	* Makefile.am (BFD32_BACKENDS): Move dwarf2.lo from here...
	(BFD_LIBS): ...to here.